# SenaiAPI

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/: main.py
backend/api/: ia.py  materials.py
backend/core/: config.py  database.py  events.py  jwt.py  limiter.py
backend/data/: seed.py
backend/models/: material.py  schemas.py
backend/services/: ai_service.py  comparison_service.py  recommendation_service.py
